Partially redesign API and limit how often not found errors are posted